[gd_scene load_steps=11 format=2]

[ext_resource path="res://Asteroid/Asteroid.tscn" type="PackedScene" id=1]
[ext_resource path="res://Assets/Audio/heart_beat.ogg" type="AudioStream" id=2]
[ext_resource path="res://StarField/StarfieldBackground.tscn" type="PackedScene" id=3]
[ext_resource path="res://UI/HUD.tscn" type="PackedScene" id=4]
[ext_resource path="res://Player/Player.tscn" type="PackedScene" id=5]
[ext_resource path="res://UI/ConfigMenu.tscn" type="PackedScene" id=6]
[ext_resource path="res://Game.gd" type="Script" id=7]
[ext_resource path="res://StarField/StarField.tscn" type="PackedScene" id=8]
[ext_resource path="res://UI/Menu.tscn" type="PackedScene" id=9]

[sub_resource type="Curve2D" id=1]
_data = {
"points": PoolVector2Array( 0, 0, 0, 0, 192, -64, 0, 0, 0, 0, 1024, -64, 0, 0, 0, 0, 1024, 480, 0, 0, 0, 0, 192, 480 )
}

[node name="Game" type="Node"]
script = ExtResource( 7 )
asteroid_scene = ExtResource( 1 )

[node name="StarfieldParallax" parent="." instance=ExtResource( 3 )]

[node name="Starfield" parent="." instance=ExtResource( 8 )]
emitting = false

[node name="HUD" parent="." instance=ExtResource( 4 )]
visible = false

[node name="Player" parent="." instance=ExtResource( 5 )]

[node name="AsteroidPath" type="Path2D" parent="."]
position = Vector2( -166.769, 25.8824 )
scale = Vector2( 1.20192, 1.02941 )
curve = SubResource( 1 )

[node name="AsteroidSpawnLocation" type="PathFollow2D" parent="AsteroidPath"]
position = Vector2( 192, -64 )

[node name="StartTimer" type="Timer" parent="."]
wait_time = 2.0
one_shot = true

[node name="ScoreTimer" type="Timer" parent="."]

[node name="AsteroidTimer" type="Timer" parent="."]
wait_time = 0.7

[node name="StartPosition" type="Position2D" parent="."]
position = Vector2( 128, 240 )

[node name="BackgroundMusic" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 2 )

[node name="Menu" parent="." instance=ExtResource( 9 )]

[node name="Config" parent="Menu" instance=ExtResource( 6 )]
visible = false
margin_left = -128.0
margin_top = 0.0
margin_right = 512.0
margin_bottom = 384.0

[connection signal="died" from="Player" to="." method="_on_Player_died"]
[connection signal="hp_updated" from="Player" to="." method="_on_Player_hp_updated"]
[connection signal="timeout" from="StartTimer" to="." method="_on_StartTimer_timeout"]
[connection signal="timeout" from="ScoreTimer" to="." method="_on_ScoreTimer_timeout"]
[connection signal="timeout" from="AsteroidTimer" to="." method="_on_AsteroidTimer_timeout"]
[connection signal="configuration_opened" from="Menu" to="." method="_on_Menu_configuration_opened"]
[connection signal="game_started" from="Menu" to="." method="_on_Menu_game_started"]
[connection signal="dynamic_background_changed" from="Menu/Config" to="." method="_on_Config_dynamic_background_changed"]
[connection signal="hide" from="Menu/Config" to="." method="_on_Config_hide"]
[connection signal="joystick_changed" from="Menu/Config" to="." method="_on_Config_joystick_changed"]
[connection signal="sensitivity_changed" from="Menu/Config" to="." method="_on_Config_sensitivity_changed"]
